 $Id: RELEASE_NOTES,v 1.76.2.1 2011/01/08 20:46:59 ak Exp $
 -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
 -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
-----------------------------------------------------------------------
 ##                                      ##  ##                                     
 ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
 #####  ##  ## ##  ## ##  ## ##   ##  ## ######     ## ###### ###### ##  ## ##  ##  
 ##  ## ##  ## ##  ## ##  ## ##   ###### ##  ##  ##### ###### ###### ###### ##      
 ##  ## ##  ## ##  ## ##  ## ##   ##     ##  ## ##  ## ##  ## ##  ## ##     ##      
 #####   ####   ##### ##  ##  #### ####  ##  ##  ##### ##  ## ##  ##  ####  ##      

                   BOUNCEHAMMER/RELEASE_NOTES
-----------------------------------------------------------------------
 Copyright (C) 2009-2011 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
 Developed by Cubicroot Co. Ltd. (http://cubicroot.jp/)
-----------------------------------------------------------------------
 This listing show the release notes of ``BounceHammer'': open-sourced
 Bounce Mail Parser. The list shows the version of BounceHammer engine,
 the version of BounceHammer's configuration file, the date of release,
 and a summary of the changes in that release.  More information about
 BounceHammer is available at http://bouncehammer.jp/ (Japanese).

 Other information is available at the following sites:

  - http://sourceforge.jp/projects/bouncehammer/
  - http://www.ohloh.net/p/bouncehammer
  - http://twitter.com/bouncehammer
-----------------------------------------------------------------------


2.6.3/2.0.0	2011/xx/yy

  Assorted improvements and code cleanup:
    * Support 2 VERTU Domains: 'vertu.me' is classified into  the host-
      group 'smartphone', and 'vertuclub.ne.jp' is  classified into the
      hostgroup  'cellphone', the domains are classified into  the pro-
      vider 'vertu'.

  Fixed bugs: