@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES.JA,v 1.52.2.1 2011/01/08 20:47:00 ak Exp $
+ $Id: RELEASE_NOTES.JA,v 1.52.2.2 2011/01/14 05:20:36 ak Exp $
 -----------------------------------------------------------------------
  ##                                      ##  ##                                     
  ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
@@ -31,6 +31,7 @@
     * 2つのVERTUドメイン対応: "vertu.me"は"smartphone"に、"vertuclub.ne
       .jp"は"cellphone"にそれぞれ分類されます。 そしてこの2つのドメイン
       はプロバイダ"vertu"に分類されます。
+    * WebUIの改善: 検索結果のページに検索に使用した条件が表示されます。
 
   修正されたバグ
     * bin/mailboxparser の引数に指定したファイルサイズが0の場合、または
