@@ -1,7 +1,7 @@
-[%# $Id: heads.tt,v 1.6 2010/08/28 17:19:11 ak Exp $ -%]
+[%# $Id: heads.tt,v 1.6.2.1 2011/01/14 05:16:00 ak Exp $ -%]
 [%# Headlines in English -%]
 [%- SET tt_head = { 
-		'aboutus'	=> 'About BounceHammer',
+		'aboutus'	=> 'About bounceHammer',
 		'aggregatedby'	=> 'Aggregated By',
 		'dailyupdates'	=> 'Daily Updates',
 		'dashboard'	=> 'Dashboard',
