@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES,v 1.76.2.1 2011/01/08 20:46:59 ak Exp $
+ $Id: RELEASE_NOTES,v 1.76.2.2 2011/01/14 05:20:36 ak Exp $
  -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
  -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
 -----------------------------------------------------------------------
@@ -35,6 +35,7 @@
       group 'smartphone', and 'vertuclub.ne.jp' is  classified into the
       hostgroup  'cellphone', the domains are classified into  the pro-
       vider 'vertu'.
+    * WebUI Improvement: Shows search query in results page.
 
   Fixed bugs:
     * Fixed an issue that when the size of the mailbox in argument is 0
